--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,162 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+:root {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    --green: #67663f;
+    --brown: #53372d;
+    color: var(--brown);
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.titlewrap {
+    display: inline-flex;
+    align-items: center;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: hand;
 }
+.titlewrap p {
+    margin: 0;
+    margin-left: 0.5rem;
+}
+.titlewrap Link {
+    cursor: hand;
+}
+button {
+    color: #ffffff;
+    border: 2px solid #53372d;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    display: inline-block;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    background: var(--brown);
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    transition: 300ms ease-in-out;
+}
+button:hover {
+    background: transparent;
+    color: var(--brown);
+}
+.btn-holder {
+    margin: 0;
+    margin-top: 0.5rem;
+    padding: 0;
+}
+.secondary-btn {
+    background: transparent;
+    border: 2px solid #53372d;
+    box-sizing: border-box;
+    filter: drop-shadow(2px 4px 8px rgba(0, 0, 0, 0.25));
+    color: #53372d;
+}
+.secondary-btn:hover {
+    background: var(--brown);
+    color: #ffffff;
+}
+.home {
+    margin: 12rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.greetbox {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-around;
+    -ms-align-items: center;
+    align-items: center;
+}
+.greettext {
+}
+.msg {
+    font-size: 1rem;
+    margin: 0;
+}
+.name {
+    font-size: 100px;
+    margin: 0;
+    font-weight: bold;
+    text-shadow: 2px 4px 16px rgba(0, 0, 0, 0.25);
+}
+.greetimg {
+    display: flex;
+    justify-content: center;
+    margin-left: 5rem;
+    background: var(--green);
+    border-radius: 200px;
+    height: 220px;
+    width: 220px;
+    box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.25);
+}
+.greetimg-img {
+    height: 220px;
+}
+/* Profile Page */
 
-* {
-  box-sizing: border-box;
+.profile {
+    margin: 3rem;
+}
+.content {
+    line-height: 28px;
+}
+.skillbox {
+    display: inline-flex;
+    justify-content: center;
+    margin-right: 2rem;
+    font-weight: 500;
+}
+.react {
+    color: #1267b7;
+}
+.node {
+    color: #59b312;
+}
+.sql {
+    color: #c5b100;
+}
+.html {
+    color: #f50d0d;
+}
+.flutter {
+    color: #1dd0e9;
+}
+.ionic {
+    color: #498aff;
+}
+.contacts {
+    display: flex;
+    flex-direction: row;
+}
+.contact-card {
+    margin: 1rem;
+    margin-top: 1.5rem;
+    display: flex;
+    padding: 1rem;
+    flex-direction: column;
+    background: #ffffff;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+}
+.contact-icon {
+    height: 90px;
+    width: 90px;
+}
+.github {
+    color: #333333;
+}
+.insta {
+    color: #bc2a8d;
+}
+.gmail {
+    color: #d44638;
+}
+.dribble {
+    color: #ea4c89;
+}
+.wa {
+    color: #25d366;
+}
+.fb {
+    color: #4267b2;
 }
