--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,6 +128,7 @@ button:hover {
   flex-direction: row;
 }
 .contact-card {
+  width: 90px;
   margin: 1rem;
   margin-top: 1.5rem;
   display: flex;
@@ -207,4 +208,89 @@ button:hover {
 .repo_btn:hover {
   background-color: transparent;
   color: #333333;
+}
+
+/* pixel 2 */
+@media only screen and (max-width: 411px) and (max-height: 731px) {
+  .greetbox {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .profile {
+    margin: 1rem;
+  }
+  .projects {
+    padding: 0rem;
+    margin: 1rem;
+  }
+  .project-holder {
+    padding: 0rem;
+    margin: 0rem;
+  }
+  .project-card {
+    margin: 1rem 0 0 0;
+    width: 320px !important;
+  }
+  .home {
+    margin: 5rem;
+  }
+  .name {
+    font-size: 48px;
+  }
+  .contacts {
+    flex-wrap: wrap;
+  }
+}
+
+/* ms surface duo */
+@media only screen and (max-width: 540px) and (max-height: 720px) {
+  .greetbox {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .home {
+    margin: 8rem;
+  }
+  .name {
+    font-size: 48px;
+  }
+  .project-card {
+    width: 350px;
+  }
+  .contacts {
+    flex-wrap: wrap;
+  }
+}
+
+/* moto g4 */
+@media only screen and (max-width: 360px) and (max-height: 640px) {
+  .greetbox {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .profile {
+    margin: 1rem;
+  }
+  .projects {
+    padding: 0rem;
+    margin: 1rem;
+  }
+  .project-holder {
+    align-items: center;
+    padding: 0rem;
+    margin: 0rem;
+  }
+  .project-card {
+    margin: 1rem 0 0 0;
+    width: 270px !important;
+  }
+  .home {
+    margin: 5rem;
+  }
+  .name {
+    font-size: 48px;
+  }
+  .contacts {
+    flex-wrap: wrap;
+  }
 }
