--- a/styles/globals.css
+++ b/styles/globals.css
@@ -210,6 +210,10 @@ button:hover {
   color: #333333;
 }
 
+.redux {
+  color: #764ABC;
+}
+
 /* pixel 2 */
 @media only screen and (max-width: 411px) and (max-height: 731px) {
   .greetbox {
