--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -64,8 +64,11 @@ button:hover {
 }
 .name {
   font-size: 48px;
-  margin: 0.3rem;
+  margin: 0;
+  font-weight: bold;
+  text-shadow: 2px 1px 8px rgba(0, 0, 0, 0.10);
 }
+
 .btn-holder {
   margin-top: 1rem;
 }
@@ -138,4 +141,15 @@ button:hover {
 }
 .fb {
   color: #4267b2;
+}
+
+.project-holder {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-card {
+  padding: 0.5rem;
+  border-radius: 6px;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
 }
