--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -66,7 +66,7 @@ button:hover {
   font-size: 48px;
   margin: 0;
   font-weight: bold;
-  text-shadow: 2px 1px 8px rgba(0, 0, 0, 0.10);
+  text-shadow: 2px 1px 8px rgba(0, 0, 0, 0.1);
 }
 
 .btn-holder {
@@ -152,4 +152,51 @@ button:hover {
   padding: 0.5rem;
   border-radius: 6px;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
+}
+
+@media only screen and (min-width: 700px) {
+  .greetbox {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-around;
+    -ms-align-items: center;
+    align-items: center;
+  }
+  .content {
+    width: 60vw;
+    line-height: 30px;
+  }
+  .greetimg {
+    display: flex;
+    justify-content: center;
+    margin-left: 5rem;
+    background: var(--green);
+    border-radius: 200px;
+    height: 220px;
+    width: 220px;
+    box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.25);
+  }
+  .project-categories {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0.5rem;
+    margin: 0.5rem;
+  }
+
+  .project-holder {
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .project-card {
+    padding: 0.8rem;
+    margin: 0.5rem;
+    width: 300px;
+    height: 200px;
+    border-radius: 6px;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
+  }
 }
