--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -6,6 +6,12 @@
   --brown: #53372d;
   color: var(--brown);
 }
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 button {
   outline: none !important;
   color: #ffffff;
@@ -35,23 +41,29 @@ button:hover {
   flex-direction: column-reverse;
   align-items: center;
 }
+.section{
+  height: calc(100vh - 10px);
+}
 .profile {
   margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .projects {
-  padding: 0rem;
-  margin: 1rem;
+  margin-left: 2rem;
 }
 .project-holder {
   padding: 0rem;
-  margin: 0rem;
+  margin-left: 1rem;
 }
 .project-card {
   margin: 1rem 0 0 0;
-  width: 320px !important;
+  /* width: 320px !important; */
 }
 .home {
-  margin-top: 12rem;
+  /* margin-top: 12rem; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -149,9 +161,14 @@ button:hover {
 }
 
 .project-card {
-  padding: 0.5rem;
-  border-radius: 6px;
+  border-radius: 8px;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
+}
+.project-card-content{
+  padding: .5rem;
+}
+.project-card-image{
+  border-radius: 8px 8px 0px 0px;
 }
 
 @media only screen and (min-width: 700px) {
@@ -192,11 +209,8 @@ button:hover {
     flex-wrap: wrap;
   }
   .project-card {
-    padding: 0.8rem;
     margin: 0.5rem;
-    width: 300px;
-    height: 200px;
-    border-radius: 6px;
-    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    /* box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25); */
   }
 }
