--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 :root {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   --green: #67663f;
   --brown: #53372d;
   color: var(--brown);
+}
+nav {
+  display: none;
 }
 nav > ul {
   display: flex;
@@ -22,7 +24,7 @@ button {
   outline: none !important;
   color: #ffffff;
   border: 2px solid #53372d;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   display: inline-block;
   margin: 0.5rem;
@@ -86,17 +88,14 @@ button:hover {
   box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.25);
 }
 .name {
-  font-size: 48px;
+  font-size: 58px;
   margin: 0;
-  font-weight: bold;
+  font-weight: 800;
   text-shadow: 2px 1px 8px rgba(0, 0, 0, 0.1);
 }
 
 .btn-holder {
   margin-top: 1rem;
-}
-.contacts {
-  flex-wrap: wrap;
 }
 .skillbox {
   display: inline-flex;
@@ -127,15 +126,15 @@ button:hover {
   color: #498aff;
 }
 .contacts {
-  display: none;
+  display: inline-flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
 .contact-card {
   width: 3rem;
-  margin: 1rem;
-  margin-top: 1.5rem;
+  margin: 0.5rem;
+  /* margin-top: 1.5rem; */
   display: flex;
   padding: 1rem;
   flex-direction: column;
@@ -184,6 +183,12 @@ button:hover {
 }
 
 @media only screen and (min-width: 700px) {
+  nav{
+    display: block;
+  }
+  .wrapper {
+    margin: 0rem 10rem 0rem 10rem;
+  }
   .greetbox {
     display: flex;
     flex-direction: row;
@@ -213,7 +218,9 @@ button:hover {
     padding: 0.5rem;
     margin: 0.5rem;
   }
-
+  .project-card-image {
+    width: 300px;
+  }
   .project-holder {
     margin: 1rem;
     display: flex;
