--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -4,15 +4,40 @@
   --green: #67663f;
   --brown: #53372d;
   color: var(--brown);
+  padding: 0;
+  margin: 0;
+}
+body,
+html {
+  padding: 0;
+  margin: 0;
 }
 nav {
   display: none;
+  height: 70px;
 }
 nav > ul {
+  padding: 0;
+  margin: 0;
   display: flex;
   list-style: none;
   align-items: center;
   justify-content: space-around;
+  align-content: center;
+}
+nav > ul > li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  color: var(--brown);
+  transition: ease-in-out 300ms;
+  cursor: pointer;
+}
+nav > ul > li:hover {
+  background-color: var(--brown);
+  color: #fafafa;
 }
 .wrapper {
   display: flex;
@@ -183,7 +208,7 @@ button:hover {
 }
 
 @media only screen and (min-width: 700px) {
-  nav{
+  nav {
     display: block;
   }
   .wrapper {
@@ -198,8 +223,14 @@ button:hover {
     align-items: center;
   }
   .content {
-    width: 60vw;
+    /* width: 90vw; */
     line-height: 30px;
+  }
+  .profile {
+    margin-top: 1rem;
+  }
+  .contacts {
+    display: flex;
   }
   .greetimg {
     display: flex;
