--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -167,6 +167,10 @@ button:hover {
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   cursor: pointer;
+  transition: ease-in-out 300ms;
+}
+.contact-card:hover{
+  box-shadow: 2px 1px 18px rgba(0, 0, 0, 0.25);
 }
 .contact-icon {
   height: 3rem;
@@ -206,6 +210,9 @@ button:hover {
 .project-card-image {
   border-radius: 8px 8px 0px 0px;
   width: calc(100vw - 1.75rem);
+}
+.project-title{
+  font-size: 2rem;
 }
 
 @media only screen and (min-width: 700px) {
