--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Inter", sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 16px;
   --green: #67663f;
   --brown: #53372d;
@@ -32,7 +32,7 @@ nav > ul > li {
   width: 100%;
   height: 50px;
   color: var(--brown);
-  transition: ease-in-out 300ms;
+  transition: ease-in-out 0.3s;
   cursor: pointer;
 }
 nav > ul > li:hover {
@@ -46,10 +46,10 @@ nav > ul > li:hover {
   align-items: center;
 }
 button {
-  outline: none !important;
-  color: #ffffff;
+  outline: 0 !important;
+  color: #fff;
   border: 2px solid #53372d;
-  font-family: "Inter", sans-serif;
+  font-family: Inter, sans-serif;
   font-style: normal;
   display: inline-block;
   margin: 0.5rem;
@@ -57,17 +57,17 @@ button {
   background: var(--brown);
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
-  transition: 300ms ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 button:hover {
-  background: transparent;
+  background: 0 0;
   color: var(--brown);
 }
 .titlewrap {
   display: inline-flex;
   align-items: center;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   cursor: hand;
 }
 .greetbox {
@@ -80,20 +80,14 @@ button:hover {
 }
 .profile {
   margin: 1rem;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
 .projects {
-  margin: 0px;
-  /* text-align: center; */
+  margin: 0;
 }
 .project-card {
   margin-bottom: 1rem;
 }
 .home {
-  /* margin-top: -5rem; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -118,7 +112,6 @@ button:hover {
   font-weight: 800;
   text-shadow: 2px 1px 8px rgba(0, 0, 0, 0.1);
 }
-
 .btn-holder {
   margin-top: 1rem;
 }
@@ -159,17 +152,16 @@ button:hover {
 .contact-card {
   width: 3rem;
   margin: 0.5rem;
-  /* margin-top: 1.5rem; */
   display: flex;
   padding: 1rem;
   flex-direction: column;
-  background: #ffffff;
+  background: #fff;
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   cursor: pointer;
-  transition: ease-in-out 300ms;
+  transition: ease-in-out 0.3s;
 }
-.contact-card:hover{
+.contact-card:hover {
   box-shadow: 2px 1px 18px rgba(0, 0, 0, 0.25);
 }
 .contact-icon {
@@ -177,7 +169,7 @@ button:hover {
   width: 3rem;
 }
 .github {
-  color: #333333;
+  color: #333;
 }
 .insta {
   color: #bc2a8d;
@@ -194,12 +186,10 @@ button:hover {
 .fb {
   color: #4267b2;
 }
-
 .project-holder {
   display: flex;
   flex-direction: column;
 }
-
 .project-card {
   border-radius: 8px;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
@@ -208,19 +198,26 @@ button:hover {
   padding: 0.5rem;
 }
 .project-card-image {
-  border-radius: 8px 8px 0px 0px;
+  border-radius: 8px 8px 0 0;
   width: calc(100vw - 1.75rem);
 }
-.project-title{
+.project-title {
   font-size: 2rem;
 }
-
+.footer {
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fafafa;
+  background-color: grey;
+}
 @media only screen and (min-width: 700px) {
   nav {
     display: block;
   }
   .wrapper {
-    margin: 0rem 10rem 0rem 10rem;
+    margin: 0 10rem 0 10rem;
   }
   .greetbox {
     display: flex;
@@ -231,7 +228,6 @@ button:hover {
     align-items: center;
   }
   .content {
-    /* width: 90vw; */
     line-height: 30px;
   }
   .profile {
@@ -269,6 +265,5 @@ button:hover {
   .project-card {
     margin: 0.5rem;
     border-radius: 8px;
-    /* box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25); */
   }
 }
