--- a/styles/mobilefirst.css
+++ b/styles/mobilefirst.css
@@ -38,12 +38,15 @@ nav > ul > li {
 nav > ul > li:hover {
   box-shadow: 2px 1px 8px rgba(0, 0, 0, 0.25);
 }
-nav > ul > li > a{
+nav > ul > li > a {
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--brown);
   font-weight: 600;
+  text-decoration: none;
+}
+.link {
   text-decoration: none;
 }
 .wrapper {
@@ -89,7 +92,7 @@ button:hover {
   margin: 1rem;
 }
 .projects {
-  margin: 0;
+  margin: 1rem;
 }
 .project-card {
   margin-bottom: 1rem;
@@ -209,7 +212,7 @@ button:hover {
   width: calc(100vw - 1.75rem);
 }
 .project-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 @media only screen and (min-width: 700px) {
   nav {
@@ -244,6 +247,9 @@ button:hover {
     height: 220px;
     width: 220px;
     box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.25);
+  }
+  .project-card {
+    width: 300px;
   }
   .project-categories {
     display: flex;
